--- a/d3-line-chart/index.html
+++ b/d3-line-chart/index.html
@@ -5,13 +5,13 @@
         <meta name="description" content="">
         <title>D3 Line Chart</title>
         <!-- Bootstrap Core CSS -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="./css/bootstrap.min.css">
         <!-- jQuery UI CSS -->
-        <link rel="stylesheet" href="css/jquery-ui.min.css">
-        <link rel="stylesheet" href="css/jquery-ui.structure.min.css">
-        <link rel="stylesheet" href="css/jquery-ui.theme.min.css">
+        <link rel="stylesheet" href="./css/jquery-ui.min.css">
+        <link rel="stylesheet" href="./css/jquery-ui.structure.min.css">
+        <link rel="stylesheet" href="./css/jquery-ui.theme.min.css">
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
 
         <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     </head>
@@ -53,17 +53,17 @@
             <div class="row">
                 <div id="chart-area"></div>  
             </div>
-            <h3>> Look at the raw data <a href="data/coins.json">here</a></h3>
-            <h3>> Look at the javascript file <a href="js/main.js">here</a></h3>
+            <h3>> Look at the raw data <a href="./data/coins.json">here</a></h3>
+            <h3>> Look at the javascript file <a href="./js/main.js">here</a></h3>
         </div>
 
     <!-- External JS libraries -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/d3.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/jquery-ui.min.js"></script>
+    <script src="./js/d3.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 
     </body>
 </html>
