--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="./css/app.css">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
     <link rel="stylesheet"
         href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 
     <!-- Plausible Analytics -->
     <script async defer data-domain="tejash-patel.com" src="https://plausible.io/js/plausible.js"></script>
@@ -70,7 +70,7 @@
             <div class="row align-items-center justify-content-center">
 
                 <div class="col-md-4 text-center d-none d-md-block mr-3">
-                    <img src="/img/index/circle-cropped.png" alt="">
+                    <img src="./img/index/circle-cropped.png" alt="">
                 </div>
                 <div class="mx-3" style="width:5px; height: 150px; background: blue; display:none"></div>
                 <div class="col-md-5 ml-3">
@@ -100,7 +100,7 @@
                             languages such as Java, Python. </p>
                     </div>
                     <div class="col-lg-6 text-center">
-                        <img src="/img/index/carletonuniversity.gif" alt="">
+                        <img src="./img/index/carletonuniversity.gif" alt="">
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                         </p>
                     </div>
                     <div class="col-lg-6 text-center">
-                        <img src="/img/index/kinaxis-logo.png" alt="">
+                        <img src="./img/index/kinaxis-logo.png" alt="">
                     </div>
                 </div>
             </div>
@@ -131,7 +131,7 @@
                                 buildings</a> program.</p>
                     </div>
                     <div class="col-lg-6 text-center">
-                        <img src="/img/index/nrc.svg" alt="">
+                        <img src="./img/index/nrc.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -145,7 +145,7 @@
                             (Java) and designing concepts.</p>
                     </div>
                     <div class="col-lg-6 text-center">
-                        <img src="/img/index/sce.svg" alt="">
+                        <img src="./img/index/sce.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                     <p>Created the <a href="http://live.cuhacking.com">live dashboard</a> for the hackathon</p>
                 </div>
                 <div class="col-lg-6 text-center">
-                    <img src="/img/index/cuhacking.svg" alt="">
+                    <img src="./img/index/cuhacking.svg" alt="">
                 </div>
             </div>
             <hr>
@@ -203,7 +203,7 @@
                     <p></p>
                 </div>
                 <div class="col-lg-6 text-center">
-                    <img src="/img/index/cses.png" alt="">
+                    <img src="./img/index/cses.png" alt="">
                 </div>
             </div>
             <hr>
@@ -213,7 +213,7 @@
                     <p></p>
                 </div>
                 <div class="col-lg-6 text-center">
-                    <img src="/img/index/ieee.svg" alt="">
+                    <img src="./img/index/ieee.svg" alt="">
                 </div>
             </div>
         </div>
@@ -227,7 +227,7 @@
                 </div>
                 <div class="card-body">
 
-                    <a href="/resume" class="btn btn-secondary btn-lg mb-2" style="width:100%; background-color: #528">
+                    <a href="./Resume_Tejash.pdf" class="btn btn-secondary btn-lg mb-2" style="width:100%; background-color: #528">
                         <i class="far fa-file"></i> <span class="network-name">Resume</span>
                     </a>
                     <hr>
