--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <meta name="description" content= "Hi! I am a third year Software Engineering student at Carleton University in Ottawa, Ontario.">
-    <meta name="keywords" content="tejash patel ottawa ontario canada carleton university kinaxis nrc ta cuhacking ieee developer software engineering bachelor">
+    <meta name="description"
+        content="Hi! I am a third year Software Engineering student at Carleton University in Ottawa, Ontario.">
+    <meta name="keywords"
+        content="tejash patel ottawa ontario canada carleton university kinaxis nrc ta cuhacking ieee developer software engineering bachelor">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -29,7 +31,7 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 
     <!-- Plausible Analytics -->
-    <script async defer data-domain="tejash-patel.com" src="https://plausible.io/js/plausible.js"></script>
+    <script async defer data-domain="tejash-patel.github.io" src="https://plausible.io/js/plausible.js"></script>
 
     <title>Tejash Patel</title>
 </head>
@@ -111,7 +113,7 @@
                     <div class="col-lg-6">
                         <h1>Winter/Summer 2021</h1>
                         <p>I will be working at Kinaxis as a Software Developer Intern
-                            with the Product Verification DevOps team 
+                            with the Product Verification DevOps team
                         </p>
                     </div>
                     <div class="col-lg-6 text-center">
@@ -128,7 +130,8 @@
                         <p>I worked at National Research Council as a Software Developer Intern under the
                             <a
                                 href="https://nrc.canada.ca/en/research-development/research-collaboration/programs/high-performance-buildings-program">high-performance
-                                buildings</a> program.</p>
+                                buildings</a> program.
+                        </p>
                     </div>
                     <div class="col-lg-6 text-center">
                         <img src="./img/index/nrc.svg" alt="">
@@ -227,7 +230,8 @@
                 </div>
                 <div class="card-body">
 
-                    <a href="./Resume_Tejash.pdf" class="btn btn-secondary btn-lg mb-2" style="width:100%; background-color: #528">
+                    <a href="./Resume_Tejash.pdf" class="btn btn-secondary btn-lg mb-2"
+                        style="width:100%; background-color: #528">
                         <i class="far fa-file"></i> <span class="network-name">Resume</span>
                     </a>
                     <hr>
