add animated links

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <nav id="mainNavbar" class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">@tejashpatel</a>
+            <a class="navbar-brand animateto-top" href="#">@tejashpatel</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,17 +50,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">About Me <span class="sr-only">(current)</span></a>
+                        <a class="nav-link animate-to-about-me" href="#">About Me <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Project</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Skills</a>
+                        <a class="nav-link animate-to-projects" href="#">Project</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link animate-to-extcurr" href="#">Volunteer</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link animate-to-skills" href="#">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link animate-to-contact" href="#">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -78,7 +80,7 @@
                 <div class="col-md-5 ml-3">
                     <h3>Hi! I'm Tejash Patel,</h3>
                     <h3><span class="typed"></span></h3>
-                    <a href="#" class="down btn btn-primary mt-3"><i class="fas fa-angle-double-down"></i> About Me</a>
+                    <a href="#" class="down btn btn-primary mt-3 animate-to-about-me"><i class="fas fa-angle-double-down"></i> About Me</a>
                 </div>
 
 
@@ -222,7 +224,7 @@
         </div>
     </section>
 
-    <section class="container">
+    <section id="skills" class="container">
         <div class="row">
             <div class="col card" id="snake-game">
                 <div class="card-header">
@@ -239,7 +241,7 @@
                         style="width:100%; background-color: #528">
                         <i class="fab fa-linkedin"></i> <span class="network-name">LinkedIn</span>
                     </a>
-                    <a href="https://github.com/tejash3402" class="btn btn-secondary btn-lg mb-2"
+                    <a href="https://github.com/tejash-patel" class="btn btn-secondary btn-lg mb-2"
                         style="width:100%; background-color: #528">
                         <i class="fab fa-github"></i> <span class="network-name">Github</span>
                     </a>
@@ -308,7 +310,7 @@
                     <p>made with love <i class="fab fa-gratipay"></i></p>
                 </div>
                 <div class="col-8 text-right">
-                    <p>Copyright 2020 © Tejash Patel. All rights reserved.</p class="justify-content-center">
+                    <p>Copyright 2021 © Tejash Patel. All rights reserved.</p class="justify-content-center">
 
                 </div>
             </div>
