--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link animate-to-about-me" href="#">About Me <span class="sr-only">(current)</span></a>
+                        <a class="nav-link animate-to-about-me" href="#">About Me <span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link animate-to-projects" href="#">Project</a>
@@ -72,19 +73,15 @@
     <section id="header" class="container-fluid">
         <div class="container">
             <div class="row align-items-center justify-content-center">
-
                 <div class="col-md-4 text-center d-none d-md-block mr-3">
-                    <img src="./img/index/circle-cropped.png" alt="">
+                    <img src="./img/index/circle-cropped (2).png" alt="">
                 </div>
                 <div class="mx-3" style="width:5px; height: 150px; background: blue; display:none"></div>
-                <div class="col-md-5 ml-3">
+                <div class="col-md-7 ml-3">
                     <h3>Hi! I'm Tejash Patel,</h3>
-                    <h3><span class="typed"></span></h3>
-                    <a href="#" class="down btn btn-primary mt-3 animate-to-about-me"><i class="fas fa-angle-double-down"></i> About Me</a>
+                    <h3>And I'm a Software Developer 🚀</h3>
+                    <a href="#" class="down btn btn-primary mt-3 animate-to-about-me">About Me</a>
                 </div>
-
-
-
             </div>
         </div>
     </section>
@@ -98,10 +95,10 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
-                        <h1>Hey there, Reader!</h1>
-                        <p>I am a second year student at Carleton University pursuing my bachelors in Software
+                        <h1>🚀 Hey there, Reader!</h1>
+                        <p>I am a third year student at Carleton University pursuing my bachelors in Software
                             Engineering. I have experience with full-stack web applications as well as programming in
-                            languages such as Java, Python. </p>
+                            languages such as C#, Java, Python. </p>
                     </div>
                     <div class="col-lg-6 text-center">
                         <img src="./img/index/carletonuniversity.gif" alt="">
@@ -114,7 +111,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <h1>Winter/Summer 2021</h1>
-                        <p>I will be working at Kinaxis as a Software Developer Intern
+                        <p>I am currently working at Kinaxis as a Software Developer Intern
                             with the Product Verification DevOps team
                         </p>
                     </div>
@@ -129,7 +126,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <h1>Summer 2020</h1>
-                        <p>I worked at National Research Council as a Software Developer Intern under the
+                        <p>I worked at National Research Council as a Web Developer Intern under the
                             <a
                                 href="https://nrc.canada.ca/en/research-development/research-collaboration/programs/high-performance-buildings-program">high-performance
                                 buildings</a> program.
@@ -145,8 +142,9 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
-                        <h1>Teaching Assistant</h1>
-                        <p>In Fall 2020, I have helped students understand and master basic object oriented programming
+                        <h1>Fall/Winter 2020</h1>
+                        <p>Being a Teaching Assistant at Carleton University, I have helped students understand and
+                            master basic object oriented programming
                             (Java) and designing concepts.</p>
                     </div>
                     <div class="col-lg-6 text-center">
@@ -157,45 +155,62 @@
         </section>
     </section>
 
-    <section id="projects" class="container">
-        <h1>Projects</h1>
-        <div class="row justify-content-center">
-            <div class="card mx-2" style="width: 18rem;">
-                <img src="./img/index/jagt-move.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Jagt-Move</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
+    <section id="projects mb-3" class="container">
+        <h1 class="mt-4 mb-4 title">Projects</h1>
+        <div class="row justify-content-center pb-4">
+
+            <div class="col-lg-6 col-sm-12 project-card">
+                <p class="text-muted">February 2020</p>
+                <div class="d-flex"><h4 class="">Jagt-Move</h4><small><a href="https://devpost.com/software/jagt-move"><i class="fas fa-external-link-alt ml-2"></i></a></small></div>
+                <p class="text-muted">NodeJS, MongoDB, React, Tenserflow</p>
+                <p class="">uOttaHack 2020 hackathon project. A health application with a NodeJS backend,
+                    and utilizing TensorFlow Lite Posenet model</p>
             </div>
-            <div class="card mx-2" style="width: 18rem;">
-                <img src="./img/index/oshawa.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Loan Management App</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
+            <div class="col-lg-6 col-sm-12 project-card">
+                <p class="text-muted">May-Aug 2019</p>
+                <h4 class="">Loan Management App</h4>
+                <p class="text-muted">NodeJs, Express, HTML, CSS, Bootstrap</p>
+                <p class="">Created a loan management web application capable of managing
+                    customers, generating loan and transaction report for a client company in Oshawa, ON</p>
             </div>
-            <div class="card mx-2" style="width: 18rem;">
-                <img src="./img/index/tic-tac-toe.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Tic-Tac-Toe</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
+            <div class="col-lg-6 col-sm-12 project-card">
+                <p class="text-muted">December 2019</p>
+                <h4 class="">Tic-Tac-Toe</h4>
+                <p class="text-muted">Java, Swing</p>
+                <p class="">Designed a Tic-Tac-Toe game using two dimensions’ grid array and
+                    Java’s Swing framework using Object Oriented Programming principles</p>
             </div>
+            <div class="col-lg-6 col-sm-12 project-card">
+                <p class="text-muted">May 2020</p>
+                <div class="d-flex"><h4 class="">CryptoTracker</h4><small><a href="./d3-line-chart/index.html"><i class="fas fa-external-link-alt ml-2"></i></a></small></div>
+                <p class="text-muted">D3.js, Javascript</p>
+                <p class="">Developed a web page to visualize statistics of different cryptocurrency over past 10 years using D3.js and jQuery</p>
+            </div>
+            <!-- <div>
+                <a href="#">View more -></a>
+            </div> -->
         </div>
     </section>
 
     <section id="ext-curr" class="container-fluid mt-4 px-0 mb-3">
         <div class="container">
+            <div>
+                <h1 class="mt-4 mb-4 title">Community</h1>
+            </div>
+            <div id="ieee" class="row align-items-center">
+                <div class="col-lg-6">
+                    <h3>IEEE Ottawa Section</h3>
+                    <p>Served as Publications Comittee Chair in 2020 and now serving as Newsletter Editor</p>
+                </div>
+                <div class="col-lg-6 text-center">
+                    <img src="./img/index/header_os_new.png" alt="">
+                </div>
+            </div>
+            <hr>
             <div id="cuhacking" class="row align-items-center">
                 <div class="col-lg-6">
-                    <h1>Web Developer</h1>
-                    <p>Created the <a href="http://live.cuhacking.com">live dashboard</a> for the hackathon</p>
+                    <h3>Web Developer</h3>
+                    <p>Created live website for cuHacking 2020. Assisted in hacker application and more.</p>
                 </div>
                 <div class="col-lg-6 text-center">
                     <img src="./img/index/cuhacking.svg" alt="">
@@ -204,56 +219,66 @@
             <hr>
             <div id="c-eng-c" class="row align-items-center">
                 <div class="col-lg-6">
-                    <h1>Consulting Director</h1>
-                    <p></p>
+                    <h3>Consulting Director</h3>
+                    <p>Directed consulting competition at
+                        Carleton Engineering Competetion C-ENG-C 2019.
+                    </p>
                 </div>
                 <div class="col-lg-6 text-center">
                     <img src="./img/index/cses.png" alt="">
                 </div>
             </div>
-            <hr>
-            <div id="ieee" class="row align-items-center">
-                <div class="col-lg-6">
-                    <h1>IEEE Volunteer</h1>
-                    <p></p>
-                </div>
-                <div class="col-lg-6 text-center">
-                    <img src="./img/index/ieee.svg" alt="">
-                </div>
-            </div>
         </div>
     </section>
 
-    <section id="skills" class="container">
-        <div class="row">
-            <div class="col card" id="snake-game">
-                <div class="card-header">
-                    <i class="fas fa-link"></i> Let's Connect
-                </div>
-                <div class="card-body">
-
-                    <a href="./Resume_Tejash.pdf" class="btn btn-secondary btn-lg mb-2"
-                        style="width:100%; background-color: #528">
-                        <i class="far fa-file"></i> <span class="network-name">Resume</span>
-                    </a>
-                    <hr>
-                    <a href="https://www.linkedin.com/in/tejash-patel-3402" class="btn btn-secondary btn-lg mb-2"
-                        style="width:100%; background-color: #528">
-                        <i class="fab fa-linkedin"></i> <span class="network-name">LinkedIn</span>
-                    </a>
-                    <a href="https://github.com/tejash-patel" class="btn btn-secondary btn-lg mb-2"
-                        style="width:100%; background-color: #528">
-                        <i class="fab fa-github"></i> <span class="network-name">Github</span>
-                    </a>
-                    <a href="mailto:tejashpatel3402@gmail.com" class="btn btn-secondary btn-lg mb-2"
-                        style="width:100%; background-color: #528">
-                        <i class="far fa-envelope"></i> <span class="network-name">Email</span>
-                    </a>
-
-                </div>
+    <section id="skills" class="container-fluid mt-4 px-0 mb-3">
+        <div class="container">
+            <div>
+                <h1 class="mt-4 mb-4 title">Skills at a glance</h1>
             </div>
+            <div class="container m-4 p-4">
+            <div class="display-4">
+                <i class="display-4 fab fa-python"></i>
+                <i class="fab fa-node"></i>
+                <i class="fab fa-js"></i>
+                <i class="fab fa-git"></i>
+                <i class="devicon-csharp-plain"></i>
+                <i class="devicon-dotnetcore-plain"></i>
+                <i class="devicon-html5-plain-wordmark"></i>
+                <i class="devicon-css3-plain-wordmark"></i>
+                <i class="devicon-mongodb-plain-wordmark"></i>
+                <i class="devicon-visualstudio-plain"></i>
+                <i class="devicon-go-plain"></i>
+                <i class="devicon-bootstrap-plain-wordmark"></i>
+                <i class="devicon-docker-plain"></i>
+            </div>
+        </div>
+        </div>
+    </section>
 
-            <div class="col card">
+    <section id="contact" class="container-fluid mt-4 px-0 mb-3">
+        <div class="container">
+            <div>
+                <h1 class="mt-4 mb-4 title"><i class="fas fa-link"></i> Let's Connect</h1>
+            </div>
+            <div class="container m-4 p-4">
+            <a href="./Resume_Tejash_Fall.pdf" class="m-3">
+                <i class="far fa-file"></i> <span class="network-name">Resume</span>
+            </a>
+            <a href="https://www.linkedin.com/in/tejash-patel-3402" class="m-3">
+                <i class="fab fa-linkedin"></i> <span class="network-name">LinkedIn</span>
+            </a>
+            <a href="https://github.com/tejash-patel" class="m-3">
+                <i class="fab fa-github"></i> <span class="network-name">Github</span>
+            </a>
+            <a href="mailto:tejashpatel3402@gmail.com" class="m-3">
+                <i class="far fa-envelope"></i> <span class="network-name">Email</span>
+            </a>
+        </div>
+        </div>
+    </section>
+
+    <!-- <div class="col card">
                 <div class="card-header">
                     <i class="far fa-flag"></i> Flag Counter
                 </div>
@@ -262,46 +287,7 @@
                             src="https://s11.flagcounter.com/count/CF3x/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_18/viewers_0/labels_0/pageviews_0/flags_0/percent_0/"
                             alt="Flag Counter" border="0"></a>
                 </div>
-            </div>
-
-            <div class="col card">
-                <img class="card-img-top" src="" alt="">
-                <h5 class="card-header"> <i class="fas fa-laptop-code"></i> Skills</h5>
-                <div class="card-body">
-
-                    <div class="display-4">
-                        <i class="display-4 fab fa-python"></i>
-                        <i class="fab fa-node"></i>
-                        <i class="fab fa-js"></i>
-                        <i class="fab fa-git"></i>
-                        <i class="devicon-c-plain"></i>
-                        <i class="devicon-html5-plain-wordmark"></i>
-                        <i class="devicon-css3-plain-wordmark"></i>
-                        <i class="devicon-mongodb-plain-wordmark"></i>
-                        <i class="devicon-visualstudio-plain"></i>
-                        <i class="devicon-go-plain"></i>
-                        <i class="devicon-bootstrap-plain-wordmark"></i>
-                    </div>
-                </div>
-            </div>
-            <br>
-
-            <div class="card" id="snake-game">
-                <div class="card-body">
-                    <p class="card-text"><a href="./snake-game.html">Snake-Game (JavaScript)</a></p>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-body">
-                    <p class="card-text"><a href="./d3-line-chart/index.html">Line Chart</a></p>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
-
+            </div> -->
 
     <section class="footer container-fluid">
         <div class="container">
@@ -310,7 +296,7 @@
                     <p>made with love <i class="fab fa-gratipay"></i></p>
                 </div>
                 <div class="col-8 text-right">
-                    <p>Copyright 2021 © Tejash Patel. All rights reserved.</p class="justify-content-center">
+                    <p>Copyright 2021 © Tejash Patel</p class="justify-content-center">
 
                 </div>
             </div>
@@ -326,8 +312,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="js/typed.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/typed.min.js"></script>
     <script src="js/app.js"></script>
 
 </body>
