fix project link

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </section>
     </section>
 
-    <section id="projects mb-3" class="container">
+    <section id="projects" class="container">
         <h1 class="mt-4 mb-4 title">Projects</h1>
         <div class="row justify-content-center pb-4">
 
