update about section

--- a/index.html
+++ b/index.html
@@ -96,9 +96,8 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <h1>🚀 Hey there, Reader!</h1>
-                        <p>I am a third year student at Carleton University pursuing my bachelors in Software
-                            Engineering. I have experience with full-stack web applications as well as programming in
-                            languages such as C#, Java, Python. </p>
+                        <p>I am currently a Software Engineer at March Networks and I am passionate about Cloud Solutions and Agile Development
+                        </p>
                     </div>
                     <div class="col-lg-6 text-center">
                         <img src="./img/index/carletonuniversity.gif" alt="">
